Horizontal alignment fixed, responsiveness guaranteed from md-view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,6 +229,8 @@ footer p {
   padding: 25px 15px;
 }
 
+/* ------------------------------------------------------------------------Mobile View----*/
+
 .vertical-line {
   border-left: solid #ee5f00 2px;
   margin-left: 20px;
@@ -261,53 +263,61 @@ footer p {
   font-size: 20px;
 }
 
-.text-history-left {
-  width: 50%;
+/* ------------------------------------------------------------------------Desktop View----*/
+
+.left-history-box{
+    width: 40%;
+    padding-bottom: 20px;
 }
 
-.text-history-left p {
-  margin-left: 25%;
-  padding: 10% 5% 10% 0%;
-  text-align: right;
-  vertical-align: middle;
+.right-history-box{
+    width: 40%;
+    padding-bottom: 20px;
 }
 
-.date-history {
+
+
+.left-history-box p {
+    margin-left: 20%;
+    text-align: right;
+    margin-top: 2%;
+    margin-right: 2%;
+}
+
+.date-history-right {
   height: 100px;
   width: 100px;
   border-radius: 50%;
   border: 5px solid #ee5f00;
-  margin: 60% 0px;;
+  margin-left: 5%;
+  margin-top: 5%;
 }
 
-.text-history-right {
-  width: 50%;
+.date-history-right p{
+    margin: 25% 0%;
+    text-align: center;
+    font-size: 28px
 }
 
-.text-history-right p {
-  margin-right: 25%;
-  padding: 5% 0%;
-  vertical-align: middle;
-}
-
-.left-history-box{
-    width: 50%;
-    position: relative;
-}
 
 .date-history-left {
   height: 100px;
   width: 100px;
   border-radius: 50%;
   border: 5px solid #ee5f00;
-  position: absolute;
-  left: 80%;
-  top: 20%;
+  float: right;
+  margin-top: 5%;
+  margin-right: 2%;
 }
 
-.date-history h2, .date-history-left h2  {
-  text-align: center;
-  padding-top: 25px;
-  margin: 0px;
+.date-history-left p{
+    margin: 25% 0%;
+    text-align: center;
+    font-size: 28px
 }
 
+.right-history-box>p {
+    margin-right: 20%;
+    margin-top: 2%;
+    margin-left: 2%;
+}
